# dprint-plugin-mago

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: check_updates.generated.yml  check_updates.ts  check_updates.yml  ci.generated.yml  ci.ts  ci.yml  publish_npm.generated.yml  publish_npm.ts
deployment/: schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  setup.js
scripts/: ai_fix.ts  generateReleaseNotes.ts  update.ts
src/: format_text.rs  wasm_plugin.rs
src/configuration/: configuration.rs  resolve_config.rs
tests/: test.rs
tests/specs/: Alignment.txt  AlignmentAssignmentTrue.txt  Basic.txt  BraceStyles.txt  BraceStylesClasslikeSameLine.txt  BraceStylesClosureNextLine.txt  BraceStylesControlNextLine.txt  BraceStylesFunctionSameLine.txt  BraceStylesMethodSameLine.txt  ClassMembers.txt  ClassMembersSeparateFalse.txt  ClassMembersSortTrue.txt  Config.txt  ConfigSingleQuote.txt  ConfigTabWidth.txt  ConfigTrailingComma.txt  ConfigUseTabs.txt  EmptyBraces.txt  EmptyBracesInlineClasslikeFalse.txt  EmptyBracesInlineClosureFalse.txt  EmptyBracesInlineConstructorFalse.txt  EmptyBracesInlineControlTrue.txt  EmptyBracesInlineFunctionTrue.txt  EmptyBracesInlineMethodTrue.txt  EmptyLines.txt  EmptyLinesBeforeReturnTrue.txt  EmptyLinesControlStructureTrue.txt  EmptyLinesMethodFalse.txt  EmptyLinesNamespaceFalse.txt  EmptyLinesOpeningTagFalse.txt  EmptyLinesUseFalse.txt  MethodChaining.txt  MethodChainingFirstOnNewLine.txt  MethodChainingFirstOnNewLineFalse.txt  Operators.txt  Preservation.txt  (+19 more)
