[package]
name = "dprint-plugin-mago"
version = "0.4.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-mago"
keywords = ["formatting", "formatter", "mago", "php"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-mago"
description = "PHP formatter for dprint via Mago."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
bumpalo = "3"
dprint-core = { version = "0.67.4", default-features = false }
mago-formatter = "1.13.1"
mago-php-version = "1.13.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.10.2"
pretty_assertions = "1.4.0"
serde_json = { version = "1.0" }
